--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^0.27.2",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.0",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.34",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
