--- a/package.json
+++ b/package.json
@@ -6,23 +6,29 @@
     "@ckeditor/ckeditor5-build-classic": "^34.2.0",
     "@ckeditor/ckeditor5-editor-classic": "^35.0.1",
     "@ckeditor/ckeditor5-react": "^5.0.2",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.1",
+    "@mui/material": "^5.9.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-slick": "^0.23.10",
     "axios": "^0.27.2",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-button": "^1.2.1",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-swipeable-views": "^0.14.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
