--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment-timezone": "^0.5.34",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-material-ui-carousel": "^3.4.2",
